--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,44 +1,33 @@
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    ext.kotlin_version = '1.8.0'
     repositories {
-        maven{
-            url 'https://maven.aliyun.com/repository/central'
-        }
-        maven{
-            url 'https://maven.aliyun.com/repository/public'
-        }
-        maven{
-            url 'https://maven.aliyun.com/repository/google'
-        }
-        maven{
-            url 'https://maven.aliyun.com/repository/gradle-plugin'
-        }
-        //google()
-        //jcenter()
+//        google()
+//        mavenCentral()
+        //central
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        //jcenter public
+        maven { url 'https://maven.aliyun.com/repository/public' }//阿里云 maven & jcenter
+        maven { url "https://jitpack.io" } // 添加jitpack
+        maven { url 'https://maven.aliyun.com/repository/google' }//阿里云 google
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.0.1'
+        classpath 'com.android.tools.build:gradle:7.1.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.18'
     }
 }
 
 allprojects {
     repositories {
-        maven{
-            url 'https://maven.aliyun.com/repository/central'
-        }
-        maven{
-            url 'https://maven.aliyun.com/repository/public'
-        }
-        maven{
-            url 'https://maven.aliyun.com/repository/google'
-        }
-        maven{
-            url 'https://maven.aliyun.com/repository/gradle-plugin'
-        }
-       // google()
-        //jcenter()
+//        google()
+//        mavenCentral()
+        //central
+        maven { url 'https://maven.aliyun.com/repository/central' }
+        //jcenter public
+        maven { url 'https://maven.aliyun.com/repository/public' }//阿里云 maven & jcenter
+        maven { url "https://jitpack.io" } // 添加jitpack
+        maven { url 'https://maven.aliyun.com/repository/google' }//阿里云 google
     }
 }
 
@@ -50,6 +39,6 @@ subprojects {
     project.evaluationDependsOn(':app')
 }
 
-task clean(type: Delete) {
+tasks.register("clean", Delete) {
     delete rootProject.buildDir
 }
