--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,31 +18,31 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=3.1.5 <4.0.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  bloc: ^7.0.0
-  flutter_bloc: ^7.0.1
-  equatable: ^2.0.2
-  rxdart: ^0.27.0
+  bloc: any
+  flutter_bloc: ^7.0.0
+  equatable: any
+  rxdart: any
   sqflite:
   path:
-  modal_bottom_sheet: ^2.0.0
-  flutter_svg: ^0.22.0
-  sleek_circular_slider: ^2.0.0
-  flutter_local_notifications: ^6.0.0
-  time: ^2.0.0
+  modal_bottom_sheet: any
+  flutter_svg: any
+  sleek_circular_slider: any
+  flutter_local_notifications: any
+  time: any
   shared_preferences: any
-  timeline_tile: ^2.0.0
-  flutter_slidable: ^0.6.0
-  flash: ^2.0.0
-  fl_chart: ^0.40.0
-  alarm_plugin:
-    git:
-      url: https://github.com/designDo/alarm_plugin.git
-      ref: 'master'
+  timeline_tile: any
+  flutter_slidable: any
+  flash: any
+  fl_chart: any
+#  alarm_plugin:
+#    git:
+#      url: https://github.com/designDo/alarm_plugin.git
+#      ref: 'master'
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
