修改：包名，且更新ios项目

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,7 +41,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.weimu.duriandiary"
+        applicationId "com.weimu.durianhabit"
 //        minSdkVersion flutter.minSdkVersion
         minSdkVersion 24
         targetSdkVersion flutter.targetSdkVersion
