--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_slidable: any
   flash: any
   fl_chart: any
+  device_info_plus: any # 查询设备信息 [Flutter Favorite]
 #  alarm_plugin:
 #    git:
 #      url: https://github.com/designDo/alarm_plugin.git
